references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/SemanticMetadata_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:39982d5f0fe7aaa102aa0cd239a5a162caf6619b0407df44cac505f69dcb00b4
size 2663
